--- a/madrid/uhi_get_satellite_data.ipynb
+++ b/madrid/uhi_get_satellite_data.ipynb
@@ -62,35 +62,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.847117</td>\n",
+       "      <td>1.711967</td>\n",
        "      <td>40.423882</td>\n",
        "      <td>-3.712257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8</td>\n",
-       "      <td>3.908468</td>\n",
+       "      <td>1.736763</td>\n",
        "      <td>40.421553</td>\n",
        "      <td>-3.682316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>16</td>\n",
-       "      <td>3.634286</td>\n",
+       "      <td>1.490390</td>\n",
        "      <td>40.440046</td>\n",
        "      <td>-3.639242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>18</td>\n",
-       "      <td>4.260863</td>\n",
+       "      <td>2.095828</td>\n",
        "      <td>40.394782</td>\n",
        "      <td>-3.731836</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>24</td>\n",
-       "      <td>2.925969</td>\n",
+       "      <td>0.775764</td>\n",
        "      <td>40.419358</td>\n",
        "      <td>-3.747344</td>\n",
        "    </tr>\n",
@@ -100,11 +100,11 @@
       ],
       "text/plain": [
        "   station  temp_diff        lat       lon\n",
-       "0        4   3.847117  40.423882 -3.712257\n",
-       "1        8   3.908468  40.421553 -3.682316\n",
-       "2       16   3.634286  40.440046 -3.639242\n",
-       "3       18   4.260863  40.394782 -3.731836\n",
-       "4       24   2.925969  40.419358 -3.747344"
+       "0        4   1.711967  40.423882 -3.712257\n",
+       "1        8   1.736763  40.421553 -3.682316\n",
+       "2       16   1.490390  40.440046 -3.639242\n",
+       "3       18   2.095828  40.394782 -3.731836\n",
+       "4       24   0.775764  40.419358 -3.747344"
       ]
      },
      "execution_count": 2,
@@ -187,35 +187,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.847117</td>\n",
+       "      <td>1.711967</td>\n",
        "      <td>439579.3291</td>\n",
        "      <td>4475049.263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8</td>\n",
-       "      <td>3.908468</td>\n",
+       "      <td>1.736763</td>\n",
        "      <td>442117.2366</td>\n",
        "      <td>4474770.696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>16</td>\n",
-       "      <td>3.634286</td>\n",
+       "      <td>1.490390</td>\n",
        "      <td>445786.1729</td>\n",
        "      <td>4476796.019</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>18</td>\n",
-       "      <td>4.260863</td>\n",
+       "      <td>2.095828</td>\n",
        "      <td>437891.6961</td>\n",
        "      <td>4471832.769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>24</td>\n",
-       "      <td>2.925969</td>\n",
+       "      <td>0.775764</td>\n",
        "      <td>436598.5637</td>\n",
        "      <td>4474571.618</td>\n",
        "    </tr>\n",
@@ -225,11 +225,11 @@
       ],
       "text/plain": [
        "   station  temp_diff          lat          lon\n",
-       "0        4   3.847117  439579.3291  4475049.263\n",
-       "1        8   3.908468  442117.2366  4474770.696\n",
-       "2       16   3.634286  445786.1729  4476796.019\n",
-       "3       18   4.260863  437891.6961  4471832.769\n",
-       "4       24   2.925969  436598.5637  4474571.618"
+       "0        4   1.711967  439579.3291  4475049.263\n",
+       "1        8   1.736763  442117.2366  4474770.696\n",
+       "2       16   1.490390  445786.1729  4476796.019\n",
+       "3       18   2.095828  437891.6961  4471832.769\n",
+       "4       24   0.775764  436598.5637  4474571.618"
       ]
      },
      "execution_count": 5,
@@ -264,8 +264,14 @@
       "text/plain": [
        "['Madrid_ETR89_MDS05.tif',\n",
        " 'Madrid_ETRS89_NDVI.tif',\n",
+       " 'Madrid_ETRS89_NDVI_scaled_50m.tif',\n",
        " 'Madrid_ETR89_IMD.tif',\n",
-       " 'Madrid_ETR89_SVF.tif']"
+       " 'predictors_skf_imd_ndvi.tif',\n",
+       " 'Madrid_ETR89_SVF_scaled_50m.tif',\n",
+       " 'Madrid_ETR89_IMD_normalized_scaled_50m.tif',\n",
+       " 'Madrid_ETR89_SVF.tif',\n",
+       " 'interpolation_SVF+IMD+NDVI.tif',\n",
+       " 'Madrid_ETR89_IMD_normalized.tif']"
       ]
      },
      "execution_count": 7,
@@ -473,7 +479,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.847117</td>\n",
+       "      <td>1.711967</td>\n",
        "      <td>439579.3291</td>\n",
        "      <td>4475049.263</td>\n",
        "      <td>0.578153</td>\n",
@@ -483,7 +489,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8</td>\n",
-       "      <td>3.908468</td>\n",
+       "      <td>1.736763</td>\n",
        "      <td>442117.2366</td>\n",
        "      <td>4474770.696</td>\n",
        "      <td>0.720239</td>\n",
@@ -493,7 +499,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>16</td>\n",
-       "      <td>3.634286</td>\n",
+       "      <td>1.490390</td>\n",
        "      <td>445786.1729</td>\n",
        "      <td>4476796.019</td>\n",
        "      <td>0.675009</td>\n",
@@ -503,7 +509,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>18</td>\n",
-       "      <td>4.260863</td>\n",
+       "      <td>2.095828</td>\n",
        "      <td>437891.6961</td>\n",
        "      <td>4471832.769</td>\n",
        "      <td>0.385797</td>\n",
@@ -513,7 +519,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>24</td>\n",
-       "      <td>2.925969</td>\n",
+       "      <td>0.775764</td>\n",
        "      <td>436598.5637</td>\n",
        "      <td>4474571.618</td>\n",
        "      <td>0.990001</td>\n",
@@ -526,11 +532,11 @@
       ],
       "text/plain": [
        "   station  temp_diff          lat          lon       svf      ndvi  imd\n",
-       "0        4   3.847117  439579.3291  4475049.263  0.578153  0.107843   74\n",
-       "1        8   3.908468  442117.2366  4474770.696  0.720239  0.329171    0\n",
-       "2       16   3.634286  445786.1729  4476796.019  0.675009  0.198323   63\n",
-       "3       18   4.260863  437891.6961  4471832.769  0.385797  0.187602    0\n",
-       "4       24   2.925969  436598.5637  4474571.618  0.990001  0.104219   52"
+       "0        4   1.711967  439579.3291  4475049.263  0.578153  0.107843   74\n",
+       "1        8   1.736763  442117.2366  4474770.696  0.720239  0.329171    0\n",
+       "2       16   1.490390  445786.1729  4476796.019  0.675009  0.198323   63\n",
+       "3       18   2.095828  437891.6961  4471832.769  0.385797  0.187602    0\n",
+       "4       24   0.775764  436598.5637  4474571.618  0.990001  0.104219   52"
       ]
      },
      "execution_count": 11,
@@ -582,7 +588,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.847117</td>\n",
+       "      <td>1.711967</td>\n",
        "      <td>40.423882</td>\n",
        "      <td>-3.712257</td>\n",
        "      <td>0.578153</td>\n",
@@ -592,7 +598,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8</td>\n",
-       "      <td>3.908468</td>\n",
+       "      <td>1.736763</td>\n",
        "      <td>40.421553</td>\n",
        "      <td>-3.682316</td>\n",
        "      <td>0.720239</td>\n",
@@ -602,7 +608,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>16</td>\n",
-       "      <td>3.634286</td>\n",
+       "      <td>1.490390</td>\n",
        "      <td>40.440046</td>\n",
        "      <td>-3.639242</td>\n",
        "      <td>0.675009</td>\n",
@@ -612,7 +618,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>18</td>\n",
-       "      <td>4.260863</td>\n",
+       "      <td>2.095828</td>\n",
        "      <td>40.394782</td>\n",
        "      <td>-3.731836</td>\n",
        "      <td>0.385797</td>\n",
@@ -622,7 +628,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>24</td>\n",
-       "      <td>2.925969</td>\n",
+       "      <td>0.775764</td>\n",
        "      <td>40.419358</td>\n",
        "      <td>-3.747344</td>\n",
        "      <td>0.990001</td>\n",
@@ -635,11 +641,11 @@
       ],
       "text/plain": [
        "   station  temp_diff        lat       lon       svf      ndvi  imd\n",
-       "0        4   3.847117  40.423882 -3.712257  0.578153  0.107843   74\n",
-       "1        8   3.908468  40.421553 -3.682316  0.720239  0.329171    0\n",
-       "2       16   3.634286  40.440046 -3.639242  0.675009  0.198323   63\n",
-       "3       18   4.260863  40.394782 -3.731836  0.385797  0.187602    0\n",
-       "4       24   2.925969  40.419358 -3.747344  0.990001  0.104219   52"
+       "0        4   1.711967  40.423882 -3.712257  0.578153  0.107843   74\n",
+       "1        8   1.736763  40.421553 -3.682316  0.720239  0.329171    0\n",
+       "2       16   1.490390  40.440046 -3.639242  0.675009  0.198323   63\n",
+       "3       18   2.095828  40.394782 -3.731836  0.385797  0.187602    0\n",
+       "4       24   0.775764  40.419358 -3.747344  0.990001  0.104219   52"
       ]
      },
      "execution_count": 12,
