Try other stations

--- a/zaragoza/bd_ayuntamiento/preprocessing.ipynb
+++ b/zaragoza/bd_ayuntamiento/preprocessing.ipynb
@@ -1797,7 +1797,7 @@
     }
    ],
    "source": [
-    "# Merge the dataframe with itself to compute the difference with station 19\n",
+    "# Merge the dataframe with itself to compute the difference with the reference station\n",
     "df_ref = temperatures[temperatures['station'] == 19][['date', 'time', 'temp']].rename(columns={'temp': 'temp_ref'})\n",
     "df_merged = pd.merge(temperatures, df_ref, on=['date', 'time'])\n",
     "df_merged"
@@ -1966,7 +1966,7 @@
     }
    ],
    "source": [
-    "# Compute the daily temperature difference from station 19 for each station\n",
+    "# Compute the daily temperature difference from reference station for each station\n",
     "df_merged['temp_diff'] = df_merged['temp'] - df_merged['temp_ref']\n",
     "df_merged"
    ]
@@ -1996,7 +1996,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "sns.boxplot(x='station', y='temp_diff', data=df_filtered)\n",
     "\n",
-    "plt.title('Boxplot of Temperature Differences with Respect to Station 19')\n",
+    "plt.title('Boxplot of Temperature Differences with Respect to the Reference Station')\n",
     "plt.xlabel('Station')\n",
     "plt.ylabel('Temperature Difference')\n",
     "\n",
@@ -2473,129 +2473,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "db8483ff-e488-4c72-924f-feef65a7df20",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
-       "      <th>station</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>temp_ref</th>\n",
-       "      <th>temp_diff</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20.720</td>\n",
-       "      <td>17.463</td>\n",
-       "      <td>3.257</td>\n",
-       "      <td>41.653858</td>\n",
-       "      <td>-0.876258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>19.950</td>\n",
-       "      <td>17.463</td>\n",
-       "      <td>2.487</td>\n",
-       "      <td>41.649671</td>\n",
-       "      <td>-0.884855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>19.560</td>\n",
-       "      <td>17.463</td>\n",
-       "      <td>2.097</td>\n",
-       "      <td>41.660269</td>\n",
-       "      <td>-0.871698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19.865</td>\n",
-       "      <td>17.463</td>\n",
-       "      <td>2.402</td>\n",
-       "      <td>41.646083</td>\n",
-       "      <td>-0.900292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>19.950</td>\n",
-       "      <td>17.463</td>\n",
-       "      <td>2.487</td>\n",
-       "      <td>41.650508</td>\n",
-       "      <td>-0.904937</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date      time  station    temp  temp_ref  temp_diff        lat  \\\n",
-       "0  2023-06-01  00:00:00        1  20.720    17.463      3.257  41.653858   \n",
-       "1  2023-06-01  00:00:00        2  19.950    17.463      2.487  41.649671   \n",
-       "2  2023-06-01  00:00:00        3  19.560    17.463      2.097  41.660269   \n",
-       "3  2023-06-01  00:00:00        4  19.865    17.463      2.402  41.646083   \n",
-       "4  2023-06-01  00:00:00        5  19.950    17.463      2.487  41.650508   \n",
-       "\n",
-       "        lon  \n",
-       "0 -0.876258  \n",
-       "1 -0.884855  \n",
-       "2 -0.871698  \n",
-       "3 -0.900292  \n",
-       "4 -0.904937  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = data.drop(columns=['code'])\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "id": "5a0326cb-15e1-422c-ad18-8483166b21b9",
    "metadata": {},
@@ -2694,7 +2571,7 @@
     }
    ],
    "source": [
-    "data = data.drop(columns=['temp', 'temp_ref'])\n",
+    "data = data.drop(columns=['code', 'temp', 'temp_ref'])\n",
     "data.head()"
    ]
   },
