New variables: NDTI + LST

--- a/zaragoza/normalize.ipynb
+++ b/zaragoza/normalize.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b7068d1b-3de7-4e78-ae58-97dd84c9266b",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,30 @@
     {
      "data": {
       "text/plain": [
-       "['Zaragoza_ETRS89_MDS05.tif',\n",
+       "['Zaragoza_ETRS89_NDTI.tif',\n",
+       " 'Zaragoza_ETRS89_NDVI_scaled_old.tif',\n",
+       " 'interpolation_SVF+IMD+NDVI_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_NDVI_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_MDS05.tif',\n",
+       " 'Zaragoza_ETRS89_MDT05.tif',\n",
+       " 'Zaragoza_ETRS89_SWIR2_normalized_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_Sky_View_Factor_scaled.tif',\n",
        " 'Zaragoza_ETRS89_Terrain_Ruggedness_Index.tif',\n",
+       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled_old.tif',\n",
+       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized.tif',\n",
+       " 'Zaragoza_ETRS89_Sky_View_Factor_scaled_old.tif',\n",
        " 'Zaragoza_ETRS89_Sky_View_Factor.tif',\n",
+       " 'predictors_skf_imd_ndvi.tif',\n",
        " 'Zaragoza_ETRS89_SWIR2.tif',\n",
+       " 'Zaragoza_ETRS89_SWIR2_normalized.tif',\n",
+       " 'Zaragoza_ETRS89_MDT05_normalized.tif',\n",
+       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_GLI.tif',\n",
+       " 'Zaragoza_ETRS89_NBAI.tif',\n",
+       " 'Zaragoza_ETRS89_LST_LC09_20230815.tif',\n",
        " 'Zaragoza_ETRS89_Total_Insolation.tif',\n",
        " 'Zaragoza_ETRS89_Visible_Sky.tif',\n",
+       " 'interpolation_SVF+IMD+NDVI.tif',\n",
        " 'Zaragoza_ETRS89_NDVI.tif',\n",
        " 'Zaragoza_ETRS89_Sky_View_Factor_Simplified.tif',\n",
        " 'Zaragoza_ETRS89_Imperviousness_Density.tif']"
@@ -58,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "89482cef-18f6-43b8-a5a2-2472f87ae3e5",
    "metadata": {},
    "outputs": [],
@@ -95,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "40488f62-aeb7-454b-a9e2-eba8f4bbae67",
    "metadata": {},
    "outputs": [
@@ -103,13 +121,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normalized raster saved to Zaragoza_ETRS89_Imperviousness_Density_normalized.tif\n"
+      "Normalized raster saved to Zaragoza_ETRS89_MDT05_normalized.tif\n"
      ]
     }
    ],
    "source": [
-    "imd_raster_path = 'Zaragoza_ETRS89_Imperviousness_Density.tif'\n",
-    "normalize(imd_raster_path)"
+    "mdt_raster_path = 'Zaragoza_ETRS89_MDT05.tif'\n",
+    "normalize(mdt_raster_path)"
    ]
   },
   {
@@ -133,6 +151,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "0130f6f9-4e28-4b49-afca-599bf7870971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized raster saved to Zaragoza_ETRS89_LST_LC09_20230815_normalized.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdt_raster_path = 'Zaragoza_ETRS89_LST_LC09_20230815.tif'\n",
+    "normalize(mdt_raster_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "cdf2c9f1-5535-46b3-9d2f-9133fd90c502",
    "metadata": {},
@@ -148,14 +185,6 @@
    "source": [
     "normalize('../../madrid/rasters/Madrid_ETR89_IMD.tif')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b2e99d1-43b6-4ec9-97b5-77ae49f991b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
