--- a/zaragoza/normalize.ipynb
+++ b/zaragoza/normalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d988ddf5-6a32-42fc-b0d9-3c3f98defa6a",
    "metadata": {},
    "outputs": [],
@@ -15,55 +15,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b7068d1b-3de7-4e78-ae58-97dd84c9266b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Go to raster directory\n",
-    "raster_dir = '../data/rasters'\n",
+    "raster_dir = '../cities/sevilla/rasters'\n",
     "os.chdir(raster_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6ffdf92f-f0e8-471b-8caf-e584a770db03",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Zaragoza_ETRS89_NDTI.tif',\n",
-       " 'Zaragoza_ETRS89_NDVI_scaled_old.tif',\n",
-       " 'interpolation_SVF+IMD+NDVI_scaled.tif',\n",
-       " 'Zaragoza_ETRS89_NDVI_scaled.tif',\n",
-       " 'Zaragoza_ETRS89_MDS05.tif',\n",
-       " 'Zaragoza_ETRS89_MDT05.tif',\n",
-       " 'Zaragoza_ETRS89_SWIR2_normalized_scaled.tif',\n",
-       " 'Zaragoza_ETRS89_Sky_View_Factor_scaled.tif',\n",
-       " 'Zaragoza_ETRS89_Terrain_Ruggedness_Index.tif',\n",
-       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled_old.tif',\n",
-       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized.tif',\n",
-       " 'Zaragoza_ETRS89_Sky_View_Factor_scaled_old.tif',\n",
-       " 'Zaragoza_ETRS89_Sky_View_Factor.tif',\n",
-       " 'predictors_skf_imd_ndvi.tif',\n",
-       " 'Zaragoza_ETRS89_SWIR2.tif',\n",
-       " 'Zaragoza_ETRS89_SWIR2_normalized.tif',\n",
-       " 'Zaragoza_ETRS89_MDT05_normalized.tif',\n",
-       " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled.tif',\n",
-       " 'Zaragoza_ETRS89_GLI.tif',\n",
-       " 'Zaragoza_ETRS89_NBAI.tif',\n",
-       " 'Zaragoza_ETRS89_LST_LC09_20230815.tif',\n",
-       " 'Zaragoza_ETRS89_Total_Insolation.tif',\n",
-       " 'Zaragoza_ETRS89_Visible_Sky.tif',\n",
-       " 'interpolation_SVF+IMD+NDVI.tif',\n",
-       " 'Zaragoza_ETRS89_NDVI.tif',\n",
-       " 'Zaragoza_ETRS89_Sky_View_Factor_Simplified.tif',\n",
-       " 'Zaragoza_ETRS89_Imperviousness_Density.tif']"
+       "['SVF.tif',\n",
+       " 'average_blue.tif',\n",
+       " 'MDS.tif',\n",
+       " 'average_red.tif',\n",
+       " 'LST.tif',\n",
+       " 'average_green.tif',\n",
+       " 'GLI.tif',\n",
+       " 'average_nir.tif',\n",
+       " 'average_swir2.tif',\n",
+       " 'NBAI.tif',\n",
+       " 'average_swir1.tif',\n",
+       " 'NDTI.tif',\n",
+       " 'MDT.tif']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "89482cef-18f6-43b8-a5a2-2472f87ae3e5",
    "metadata": {},
    "outputs": [],
@@ -108,7 +94,45 @@
     "    with rasterio.open(output_path, 'w', **meta) as dst:\n",
     "        dst.write(normalized_raster, 1)\n",
     "    \n",
-    "    print(f\"Normalized raster saved to {output_path}\")"
+    "    print(f'Normalized raster saved to {output_path}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0d961cd9-8498-4c88-a21b-fb67b089a600",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized raster saved to MDT_normalized.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdt_raster_path = 'MDT.tif'\n",
+    "normalize(mdt_raster_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aa9c2b20-d3f8-406d-a7b1-6263779b9612",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized raster saved to LST_normalized.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_raster_path = 'LST.tif'\n",
+    "normalize(lst_raster_path)"
    ]
   },
   {
