Interpolation in Sevilla, Oviedo & Valencia

--- a/cities/sevilla/kriging_netatmo.ipynb
+++ b/cities/sevilla/kriging_netatmo.ipynb
@@ -268,14 +268,20 @@
     {
      "data": {
       "text/plain": [
-       "['SVF.tif',\n",
+       "['GLI_scaled.tif',\n",
+       " 'SVF.tif',\n",
+       " 'NDTI_scaled.tif',\n",
+       " 'predictors_svf_gli.tif',\n",
+       " 'NBAI_scaled.tif',\n",
        " 'average_blue.tif',\n",
+       " 'MDT_normalized_scaled.tif',\n",
        " 'MDS.tif',\n",
        " 'SVF_scaled.tif',\n",
        " 'average_red.tif',\n",
        " 'MDT_normalized.tif',\n",
        " 'LST.tif',\n",
        " 'average_green.tif',\n",
+       " 'LST_normalized_scaled.tif',\n",
        " 'GLI.tif',\n",
        " 'average_nir.tif',\n",
        " 'average_swir2.tif',\n",
