--- a/zaragoza/kriging_netatmo.ipynb
+++ b/zaragoza/kriging_netatmo.ipynb
@@ -273,9 +273,12 @@
        " 'interpolation_SVF+IMD+NDVI_scaled.tif',\n",
        " 'Zaragoza_ETRS89_NDVI_scaled.tif',\n",
        " 'Zaragoza_ETRS89_MDS05.tif',\n",
+       " 'Zaragoza_ETRS89_GLI_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_NDTI_scaled.tif',\n",
        " 'Zaragoza_ETRS89_LST_LC09_20230815_normalized.tif',\n",
        " 'Zaragoza_ETRS89_MDT05.tif',\n",
        " 'Zaragoza_ETRS89_SWIR2_normalized_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_LST_LC09_20230815_normalized_scaled.tif',\n",
        " 'Zaragoza_ETRS89_Sky_View_Factor_scaled.tif',\n",
        " 'Zaragoza_ETRS89_Terrain_Ruggedness_Index.tif',\n",
        " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled_old.tif',\n",
@@ -287,9 +290,11 @@
        " 'Zaragoza_ETRS89_SWIR2_normalized.tif',\n",
        " 'Zaragoza_ETRS89_MDT05_normalized.tif',\n",
        " 'Zaragoza_ETRS89_Imperviousness_Density_normalized_scaled.tif',\n",
+       " 'Zaragoza_ETRS89_MDT05_normalized_scaled.tif',\n",
        " 'Zaragoza_ETRS89_GLI.tif',\n",
        " 'Zaragoza_ETRS89_NBAI.tif',\n",
        " 'Zaragoza_ETRS89_LST_LC09_20230815.tif',\n",
+       " 'Zaragoza_ETRS89_NBAI_scaled.tif',\n",
        " 'Zaragoza_ETRS89_Total_Insolation.tif',\n",
        " 'Zaragoza_ETRS89_Visible_Sky.tif',\n",
        " 'interpolation_SVF+IMD+NDVI.tif',\n",
